# ai-intel-pipeline

./: .env.example  .gitignore  LICENSE  README.md  TROUBLESHOOTING.md  pyproject.toml  render.yaml
config/: config.yaml  watchlist.txt
frontend/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
prompts/: analyst.txt  enrichment.txt
scripts/: _common.py  backfill_hn_history.py  debug_proposer_prompt.py  diag.py  diag_collector_stats.py  diag_idea_detail.py  diag_persona_scores.py  diag_trajectory.py  diag_trends.py  embed_now.py  enrich_pending.py  ingest_a16z.py  ingest_altman.py  ingest_cbinsights_postmortems.py  ingest_failory.py  ingest_hormozi.py  ingest_pg.py  ingest_success_stories.py  ingest_tan.py  ingest_yc.py  ingest_yc_graveyard.py  install_windows_scheduler.py  reaggregate_verdicts.py  setup_google_auth.py  setup_piper.py  supervisor.py
tests/: test_agents.py  test_analyst.py  test_app_scanner.py  test_brain.py  test_brief.py  test_browser_observe.py  test_clap_detector.py  test_collectors_base.py  test_collectors_hn.py  test_collectors_persist.py  test_collectors_ph.py  test_collectors_registry.py  test_collectors_rss.py  test_collectors_runner.py  test_collectors_watchlist.py  test_context.py  test_db_models.py  test_db_session.py  test_enrichment.py  test_enrichment_runner.py  test_google_auth.py  test_ingest_common.py  test_jarvis_permissions.py  test_journey_agent.py  test_llm.py  test_mailer.py  test_maintenance.py  test_memory.py  test_pain_sources_collector.py  test_pdf.py  test_pdf_sections.py  (+8 more)
(+163 files in other folders)
